Update threerow spacing for English grid view

--- a/english/birdsnest_swimbladder_seacucumber.html
+++ b/english/birdsnest_swimbladder_seacucumber.html
@@ -42,7 +42,7 @@
     	
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Double-boiled bird's nest with partridge and matsutake soup</h1>
+				<h1 class="threerow">Double-boiled bird's nest with partridge and matsutake soup</h1>
 				<p class="price seasonal">Seasonal</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/birdsnest_s.jpg" alt="Double-boiled bird's nest with partridge and matsutake soup" />
@@ -50,7 +50,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Wild rice cooked with matsutake and spike sea cucumber</h1>
+				<h1 class="threerow">Wild rice cooked with matsutake and spike sea cucumber</h1>
 				<p class="price ">$36<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/seacucumber_s.jpg" alt="Wild rice cooked with matsutake and spike sea cucumber" />
@@ -58,7 +58,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1 class="tworow">Stir-fried spike sea cucumber with garlic and black truffle (Reg.) </h1>
+				<h1 class="threerow">Stir-fried spike sea cucumber with garlic and black truffle (Reg.) </h1>
 				<p class="price">$52<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/friedgarlic_s.jpg" alt="Stir-fried spike sea cucumber with garlic and black truffle" />
@@ -66,7 +66,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Spike sea cucumber soaked in vinegar</h1>
+				<h1 class="threerow">Spike sea cucumber soaked in vinegar</h1>
                 <p class="price ">$36<sup>.80</sup></p>
 				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
@@ -79,7 +79,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Poached fish maw with premium stock</h1>
+				<h1 class="threerow">Poached fish maw with premium stock</h1>
 				<p class="price ">$68<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/4_birdnest/boiledswimbladder_s.jpg" alt="Poached fish maw with premium stock" />
@@ -87,7 +87,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Braised matsutake slices and fish maw with abalone sauce</h1>
+				<h1 class="threerow">Braised matsutake slices and fish maw with abalone sauce</h1>
 				<p class="price seasonal">Seasonal</p>
 			</div>
 			<img src="../images/dishes/4_birdnest/abaloneswimbladder_s.jpg" alt="Braised matsutake slices and fish maw with abalone sauce" />
@@ -96,7 +96,7 @@
 
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Braised spike sea cucumber with abalone sauce</h1>
+				<h1 class="threerow">Braised spike sea cucumber with abalone sauce</h1>
                 <p class="price ">$36<sup>.80</sup></p>
 				<!--<p class="price special">$28<sup>.80</sup>
                 <span class="outer">
@@ -119,7 +119,7 @@
         
         <div class="grid_thumb">
 			<div class="heading">
-				<h1>Stewed whole premium fish maw trimmed with pea sprouts (for 10 persons)</h1>
+				<h1>Stewed whole premium fish maw trimmed with pea <br /> sprouts (for 10 persons)</h1>
                 <p class="price ">$438<sup>.00</sup></p>
 				<!--<p class="price special">$328<sup>.00</sup>
                 <span class="outer">
