--- a/english/hotpot.html
+++ b/english/hotpot.html
@@ -49,7 +49,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Stewed ox tail with red wine in casserole</h1>
+                    <h1 class="threerow">Stewed ox tail with red wine in casserole</h1>
                     <p class="price">$56<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/ECD_0070oxtail_s.jpg" alt="Stewed ox tail with red wine in casserole" />
@@ -57,7 +57,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow" style="    margin-bottom: 15px;">Stewed oysters and barbequed pork belly casserole</h1>
+                    <h1 class="threerow">Stewed oysters and barbequed pork belly casserole</h1>
                     <p class="price">$32<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/stewedoysters_s.jpg" alt="Stewed oysters and barbequed pork belly casserole" />
@@ -65,7 +65,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Stewed pumpkin and beef short ribs in casserole</h1>
+                    <h1 class="threerow">Stewed pumpkin and beef short ribs in casserole</h1>
                     <p class="price">$23<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/stewedpumpkin_s.jpg" alt="Stewed pumpkin and beef short ribs in casserole" />
@@ -73,7 +73,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Prawn ball and tofu casserole</h1>
+                    <h1 class="threerow">Prawn ball and tofu casserole</h1>
                     <p class="price">$26<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/prawnballandtofucasserole_s.jpg" alt="Prawn ball and tofu casserole" />
@@ -81,7 +81,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Chinese mushrooms and goose webs casserole</h1>
+                    <h1 class="threerow">Chinese mushrooms and goose webs casserole</h1>
                     <p class="price">$26<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/goosewebs_s.jpg" alt="Chinese mushrooms and goose webs casserole" />
@@ -89,7 +89,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Sea cucumber, goose webs and shrimp roe casserole</h1>
+                    <h1 class="threerow">Sea cucumber, goose webs and shrimp roe casserole</h1>
                     <p class="price">$34<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/scgwsrcasserole_s.jpg" alt="Sea cucumber, goose webs and shrimp roe casserole" />
@@ -97,7 +97,7 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Black cod and bitter gourd casserole</h1>
+                    <h1 class="threerow">Black cod and bitter gourd casserole</h1>
                     <p class="price">$30<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/blackcod_s.jpg" alt="Black cod and bitter gourd casserole" />
