--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -19,7 +19,7 @@
     <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
     <a id="back" href="hotpot.html">Back</a>
     <!--<a id="back" href="abalone_sharkfin_list.html">Back</a>-->
-	<a href="../chinese/hotpot.html?id=1" class="lang">中文</a> </div><!--header-->
+	<a href="../chinese/hotpot_list.html?id=1" class="lang">中文</a> </div><!--header-->
 
 <div id="wrapper" class="clearfix is_english">
 	<div id="sidebar">
