--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -18,7 +18,7 @@
         <a href="../index.html"><img src="../images/logo.png" alt="Chef Tony Menu" /></a>
         <a id="back" href="hotpot.html">返回</a>
         <!--<a id="back" href="abalone_sharkfin.html">返回</a>-->
-        <a href="../english/hotpot.html?id=1" class="lang">English</a> </div>
+        <a href="../english/hotpot_list.html?id=1" class="lang">English</a> </div>
     <!--header-->
     <div id="wrapper" class="clearfix">
         <div id="sidebar">
