Correct the Hotpot images in grid view and some minor pricing updates

--- a/chinese/bbq.html
+++ b/chinese/bbq.html
@@ -118,7 +118,7 @@
 
 		<div class="grid_thumb">
 			<div class="heading">
-				<h1>黑毛豬蜜汁叉燒 (例)</h1>
+				<h1>黑豚肉蜜汁叉燒 (例)</h1>
 				<p class="price">$23<sup>.80</sup></p>
 			</div>
 			<img src="../images/dishes/3_bbq/ECD_0029bbqpork_s.jpg"  />
