--- a/chinese/bbq_list.html
+++ b/chinese/bbq_list.html
@@ -146,7 +146,7 @@
 
 		<li class="list_item">
 			<div class="heading">
-				<h1>黑毛豬蜜汁叉燒 (例)</h1>
+				<h1>黑豚肉蜜汁叉燒 (例)</h1>
                 <p class="desc"></p>
                 <div class="tags">
                 </div>
