Add 3 casserole items

--- a/chinese/hotpot.html
+++ b/chinese/hotpot.html
@@ -40,6 +40,30 @@
         <div id="gridview" class="menu_body">
             <div class="grid_thumb">
                 <div class="heading">
+                    <h1 class="tworow">黑松露雙菇玉子豆腐煲</h1>
+                    <p class="price">$28<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4332_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
+                    <h1>漁香茄子煲</h1>
+                    <p class="price">$24<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4336_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
+                    <h1>南乳粗齋煲</h1>
+                    <p class="price">$24<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4345_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
                     <h1>啫啫松茸滑雞煲</h1>
                     <p class="price">$24<sup>.80</sup></p>
                 </div>
