--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -49,6 +49,39 @@
        <!-- <li class="list_item"  style="min-height:420px;">
         	<img src="../images/dishes/10_casserole/hotpot.jpg" alt="casserole" />
         </li>-->
+        <li class="list_item">
+                    <div class="heading">
+                        <h1>Stewed enoki mushroom and egg tofu with black truffle in casserole</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$28<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4332_l.jpg"  />
+                </li>
+                <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
+                        <h1>Stewed eggplant and ground pork with spicy sauce in casserole</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$24<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4336_l.jpg"  />
+                </li>
+                <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
+                        <h1>Stewed lotus root, vegetables, tofu skin and vermicelli with red bean curd in casserole</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$24<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4345_l.jpg"  />
+                </li>
+                <!--list_item-->
         
         <li class="list_item">
             <div class="heading">
