--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -43,6 +43,39 @@
             <ul class="bxslider">
                 <li class="list_item">
                     <div class="heading">
+                        <h1>黑松露雙菇玉子豆腐煲</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$28<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4332_l.jpg"  />
+                </li>
+                <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
+                        <h1>漁香茄子煲</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$24<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4336_l.jpg"  />
+                </li>
+                <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
+                        <h1>南乳粗齋煲</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$24<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/IMG_4345_l.jpg"  />
+                </li>
+                <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
                         <h1>啫啫松茸滑雞煲</h1>
                         <p class="desc"></p>
                         <div class="tags">
