--- a/english/hotpot.html
+++ b/english/hotpot.html
@@ -41,7 +41,31 @@
         <div id="gridview" class="menu_body">
             <div class="grid_thumb">
                 <div class="heading">
-                    <h1 class="tworow">Sizzling chicken and matsutake casserole</h1>
+                    <h1 class="threerow">Stewed enoki mushroom and egg tofu with black truffle in casserole</h1>
+                    <p class="price">$28<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4332_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
+                    <h1 class="threerow">Stewed eggplant and ground pork with spicy sauce in casserole</h1>
+                    <p class="price">$24<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4336_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
+                    <h1 class="threerow">Stewed lotus root, vegetables, tofu skin and vermicelli with red bean curd in casserole</h1>
+                    <p class="price">$24<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/IMG_4345_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
+                    <h1 class="threerow">Sizzling chicken and matsutake casserole</h1>
                     <p class="price">$24<sup>.80</sup></p>
                 </div>
                 <img src="../images/dishes/10_casserole/hotpot_s.jpg" alt="Sizzling chicken and matsutake casserole" />
