add back 古法炆羊腩煲

--- a/chinese/hotpot.html
+++ b/chinese/hotpot.html
@@ -48,6 +48,14 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
+                    <h1 class="tworow">古法炆羊腩煲</h1>
+                    <p class="price">$39<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/stewedlambbelly_s.jpg"  />
+            </div>
+            <!--grid_thumb-->
+            <div class="grid_thumb">
+                <div class="heading">
                     <h1>漁香茄子煲</h1>
                     <p class="price">$24<sup>.80</sup></p>
                 </div>
