--- a/chinese/hotpot_list.html
+++ b/chinese/hotpot_list.html
@@ -54,6 +54,18 @@
                 <!--list_item-->
                 <li class="list_item">
                     <div class="heading">
+                        <h1>古法炆羊腩煲</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$39<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/stewedlambbelly_l.jpg"  />
+                </li>
+                <!--list_item-->
+
+                <li class="list_item">
+                    <div class="heading">
                         <h1>漁香茄子煲</h1>
                         <p class="desc"></p>
                         <div class="tags">
