--- a/english/hotpot.html
+++ b/english/hotpot.html
@@ -49,6 +49,14 @@
             <!--grid_thumb-->
             <div class="grid_thumb">
                 <div class="heading">
+                    <h1 class="threerow">Stewed lamb belly in casserole</h1>
+                    <p class="price">$39<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/10_casserole/stewedlambbelly_s.jpg"  />
+            </div>
+            <!--grid_thumb-->		
+            <div class="grid_thumb">
+                <div class="heading">
                     <h1 class="threerow">Stewed eggplant and ground pork with spicy sauce in casserole</h1>
                     <p class="price">$24<sup>.80</sup></p>
                 </div>
