Stewed lamb belly in casserole

--- a/english/hotpot_list.html
+++ b/english/hotpot_list.html
@@ -49,7 +49,7 @@
        <!-- <li class="list_item"  style="min-height:420px;">
         	<img src="../images/dishes/10_casserole/hotpot.jpg" alt="casserole" />
         </li>-->
-        <li class="list_item">
+                <li class="list_item">
                     <div class="heading">
                         <h1>Stewed enoki mushroom and egg tofu with black truffle in casserole</h1>
                         <p class="desc"></p>
@@ -60,6 +60,17 @@
                     <img src="../images/dishes/10_casserole/IMG_4332_l.jpg"  />
                 </li>
                 <!--list_item-->
+                <li class="list_item">
+                    <div class="heading">
+                        <h1>Stewed lamb belly in casseroled</h1>
+                        <p class="desc"></p>
+                        <div class="tags">
+                        </div>
+                        <p class="price">$39<sup>.80</sup></p>
+                    </div>
+                    <img src="../images/dishes/10_casserole/stewedlambbelly_l.jpg"  />
+                </li>
+                <!--list_item-->		
                 <li class="list_item">
                     <div class="heading">
                         <h1>Stewed eggplant and ground pork with spicy sauce in casserole</h1>
