--- a/english/luxury_list.html
+++ b/english/luxury_list.html
@@ -43,7 +43,20 @@
 
 
     	<ul class="bxslider">
-
+		
+    	<li class="list_item">
+            <div class="heading">
+				<h1>Stir-fried BC sea cucumber with barbequed pork and green bean</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price">$46<sup>.80</sup></p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/seacucumberbbqpork_l.jpg" />
+		</li><!--list_item-->
+		
     	<li class="list_item">
             <div class="heading">
 				<h1>Stir-fried prawn ball and scallop with black garlics</h1>
