--- a/english/specialties_luxury.html
+++ b/english/specialties_luxury.html
@@ -41,6 +41,14 @@
         <div id="gridview" class="menu_body">
             <div class="grid_thumb">
                 <div class="heading">
+                    <h1 class="threerow">Stir-fried BC sea cucumber with barbequed pork and green bean</h1>
+                    <p class="price">$46<sup>.80</sup></p>
+                </div>
+                <img src="../images/dishes/5_specialties_shanzhen/seacucumberbbqpork_s.jpg" />
+            </div>
+            <!--grid_thumb-->		
+            <div class="grid_thumb">
+                <div class="heading">
                     <h1 class="threerow">Stir-fried prawn ball and scallop with black garlics</h1>
                     <p class="price">$36<sup>.80</sup></p>
                 </div>
