--- a/chinese/specialties_luxury.html
+++ b/chinese/specialties_luxury.html
@@ -38,6 +38,14 @@
 		</ul>
 	</div><!--sidebar-->
 	<div id="gridview" class="menu_body" style="height: 693px; overflow: scroll;">
+
+	<div class="grid_thumb">
+			<div class="heading">
+				<h1>黑毛豬叉燒爆炒BC海參</h1>
+				<p class="price">$46<sup>.80</sup></p>
+			</div>
+			<img src="../images/dishes/5_specialties_shanzhen/seacucumberbbqpork_s.jpg"  />
+		</div><!--grid_thumb-->
     	
     	<div class="grid_thumb">
 			<div class="heading">
