add new item seacucumberbbqpork_l.jpg

--- a/chinese/luxury_list.html
+++ b/chinese/luxury_list.html
@@ -44,6 +44,19 @@
 
     	<li class="list_item">
             <div class="heading">
+				<h1>黑毛豬叉燒爆炒BC海參</h1>
+                <p class="desc"></p>
+                <div class="tags">
+                	<p></p>
+                    <p></p>
+                </div>
+				<p class="price">$46<sup>.80</sup></p>
+			</div>
+                    <img src="../images/dishes/5_specialties_shanzhen/seacucumberbbqpork_l.jpg" />
+		</li><!--list_item-->		
+		
+    	<li class="list_item">
+            <div class="heading">
 				<h1>黑蒜蝦球帶子</h1>
                 <p class="desc"></p>
                 <div class="tags">
